--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
 </head>
 <body>
 
-	<img src="assets/textmail-logo-glyph-text-1.2.png" alt="Textmail Logo" class="textmail-logo">
+	<div  class="div-center">
+
+		<img src="assets/textmail-logo-glyph-text-1.2.png" alt="Textmail Logo" class="textmail-logo">
+
+		<h1 class="margin-text">A modern iOS email client for Gmail</h1>
+		<p>Textmail is an easy, fast and fun way to enjoy your emails 😍</p>
+
+		<p class="italic-text">Say hello to fast typing, simple chats, auto subjects, HTML stories, smart cards, typing status, read check, AI summarization, calendar integration...</p>
+
+	</div>
 
 	<footer>
 		<p>
